--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/RainingCity.loader.js";
+      var loaderUrl = buildUrl + "/RaininyCityPrototype.loader.js";
       var config = {
-        dataUrl: buildUrl + "/RainingCity.data",
-        frameworkUrl: buildUrl + "/RainingCity.framework.js",
-        codeUrl: buildUrl + "/RainingCity.wasm",
+        dataUrl: buildUrl + "/RaininyCityPrototype.data",
+        frameworkUrl: buildUrl + "/RaininyCityPrototype.framework.js",
+        codeUrl: buildUrl + "/RaininyCityPrototype.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "LudensProjects",
         productName: "PlayCompPrototype",
